RESOLVED FIXED 169483
The JITs should be able to emit fast TLS loads
https://bugs.webkit.org/show_bug.cgi?id=169483
Summary The JITs should be able to emit fast TLS loads
Filip Pizlo
Reported 2017-03-10 13:53:55 PST
Patch forthcoming.
Attachments
maybe the patch (29.38 KB, patch)
2017-03-10 13:55 PST, Filip Pizlo
no flags
the patch (29.73 KB, patch)
2017-03-10 18:29 PST, Filip Pizlo
keith_miller: review+
possible patch for landing (32.19 KB, patch)
2017-03-10 22:06 PST, Filip Pizlo
no flags
Filip Pizlo
Comment 1 2017-03-10 13:55:41 PST
Created attachment 304070 [details] maybe the patch It probably doesn't work yet.
WebKit Commit Bot
Comment 2 2017-03-10 16:07:29 PST
Attachment 304070 [details] did not pass style-queue: ERROR: Source/WTF/wtf/WTFThreadData.cpp:69: Missing space before { [whitespace/braces] [5] ERROR: Source/WTF/wtf/FastTLS.h:30: Alphabetical sorting problem. [build/include_order] [4] Total errors found: 2 in 15 files If any of these errors are false positives, please file a bug against check-webkit-style.
Filip Pizlo
Comment 3 2017-03-10 18:29:37 PST
Created attachment 304112 [details] the patch
WebKit Commit Bot
Comment 4 2017-03-10 18:32:24 PST
Attachment 304112 [details] did not pass style-queue: ERROR: Source/WTF/wtf/WTFThreadData.cpp:69: Missing space before { [whitespace/braces] [5] ERROR: Source/WTF/wtf/FastTLS.h:30: Alphabetical sorting problem. [build/include_order] [4] Total errors found: 2 in 15 files If any of these errors are false positives, please file a bug against check-webkit-style.
Keith Miller
Comment 5 2017-03-10 19:30:35 PST
Comment on attachment 304112 [details] the patch r=me you got some build issues though.
Filip Pizlo
Comment 6 2017-03-10 22:06:24 PST
Created attachment 304134 [details] possible patch for landing
Filip Pizlo
Comment 7 2017-03-10 22:06:39 PST
(In reply to comment #5) > Comment on attachment 304112 [details] > the patch > > r=me you got some build issues though. Thanks! Yeah, I didn't do a good job on the x86-32 part.
WebKit Commit Bot
Comment 8 2017-03-10 22:08:11 PST
Attachment 304134 [details] did not pass style-queue: ERROR: Source/WTF/wtf/WTFThreadData.cpp:69: Missing space before { [whitespace/braces] [5] ERROR: Source/WTF/wtf/FastTLS.h:30: Alphabetical sorting problem. [build/include_order] [4] Total errors found: 2 in 15 files If any of these errors are false positives, please file a bug against check-webkit-style.
Filip Pizlo
Comment 9 2017-03-10 23:18:24 PST
Note You need to log in before you can comment on or make changes to this bug.